--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h1>Download your transcription</h1>
 
-<form action="submit" method='POST'>
+<form action="submit" method='GET'>
   <label for="ytlink">YT id:</label>
   <input type="text" id="yt link" name="yt link"><br><br>
   <label for="language">Language:</label>
