--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-		<form action="submit" method='POST'>
+		<form action="submit" method='POST','GET'>
 			<label for="ytlink"><strong>YT id of the video:</label></strong>
 			<input type="text" id="yt link" name="yt link">
 			<br>
