--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="style1.css">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-		<form action="/submit" method='POST' enctype="multipart/form-data">
+		<form action="/submit" method='POST'>
 			<label for="ytlink"><strong>YT id of the video:</label></strong>
 			<input class="input-group input-group-sm mb-3" style="width:170px" type="text" id="yt link" name="yt link">
 			<br>
